<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_1"
        android:icon="@drawable/ic_talks"
        android:title="@string/title_1" />

    <item
        android:id="@+id/navigation_2"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_2" />

    <item
        android:id="@+id/navigation_3"
        android:icon="@drawable/ic_prayer"
        android:title="@string/title_3" />

    <item
        android:id="@+id/navigation_4"
        android:icon="@drawable/ic_studies"
        android:title="@string/title_4" />

    <item
        android:id="@+id/navigation_5"
        android:icon="@drawable/ic_contact_us"
        android:title="@string/title_5" />

</menu>
